--- a/Board/.env
+++ b/Board/.env
@@ -1,5 +1,5 @@
-EMAIL_HOST_USER="artsemlemesh@mail.ru"
-EMAIL_HOST_PASSWORD="Artem040036"
+EMAIL_HOST_USER="Artsemlemesh"
+EMAIL_HOST_PASSWORD="enjnbjhqjinpomwh"
 DEFAULT_FROM_EMAIL = "artsemlemesh@mail.ru"
 
 
